[tool.poetry]
name = "nonebot-plugin-escape-url"
version = "0.1.4"
description = ""
authors = ["ssttkkl <huang.wen.long@hotmail.com>"]
readme = "README.md"
packages = [{ include = "nonebot_plugin_escape_url" }]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0"

[tool.poetry.group.dev.dependencies]
nonebot2 = {extras = ["fastapi"], version = "^2.3.3"}
nonebot-adapter-onebot = "^2.2.2"
pytest = "^8.3.3"
nonebug = "^0.3.7"
pytest-asyncio = "^0.24.0"
nonebot-plugin-send-anything-anywhere = "^0.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

