[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["nonebot_plugin_escape_url"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "nonebot-plugin-escape-url"
version = "0.1.5.post.1"
description = ""
authors = [
    {name = "ssttkkl", email = "huang.wen.long@hotmail.com"},
]
dependencies = [
    "nonebot2<3.0,>=2.0",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}


[dependency-groups]
dev = [
    "nonebot2[fastapi]<3.0.0,>=2.3.3",
    "nonebot-adapter-onebot<3.0.0,>=2.2.2",
    "pytest<9.0.0,>=8.3.3",
    "nonebug<1.0.0,>=0.3.7",
    "pytest-asyncio<1.0.0,>=0.24.0",
    "nonebot-plugin-send-anything-anywhere<1.0.0,>=0.7.1",
]
